[package]
name = "insomnia_db_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
async-stream = "0.3.5"
async-trait = "0.1.74"
atoi = "2.0.0"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
default = ["full"]
client = []
server = []
full = ["client", "server"]
